# cpp-template

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/cpp_template/: CMakeLists.txt
test/: CMakeLists.txt  test_template.cpp
